k8s/commands-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
      - name: commandservice
        image: mtohub/commandservice:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata: 
  name: commands-clusterid-service
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports: 
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 80
