k8s/platforms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
      - name: platformservice
        image: mtohub/platformservice:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata: 
  name: platforms-clusterid-service
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports: 
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
    - name: platformgrpc
      protocol: TCP
      port: 666
      targetPort: 666
