k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/platforms"
        backend:
          service:
            name: platforms-clusterid-service
            port: 
              number: 30080
      - pathType: Prefix
        path: "/api/c/platforms"
        backend:
          service:
            name: commands-clusterid-service
            port: 
              number: 80
